--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
         {{ content }}
       </div>
     </div>
-{% include comments.html %}
-   
 
+   
+ {% include footer.html %}
   </body>
 
 </html>
