--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
-         {% include share-page.html %}
+         {% include share-btn.html %}
       </div>
     </div>
 
