--- a/_includes/share-btn.html
+++ b/_includes/share-btn.html
@@ -36,7 +36,7 @@
         <h1>Share Buttons</h1>
 
         <!-- Twitter -->
-        <a href="http://twitter.com/share?url=https://github.com/gschier/html-share-buttons&text=HMTL%20Share%20Buttons&via=GregorySchier" target="_blank" class="share-btn twitter">
+        <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" target="_blank" class="share-btn twitter">
             <i class="fa fa-twitter"></i>
         </a>
 
