--- a/_includes/share-btn.html
+++ b/_includes/share-btn.html
@@ -41,22 +41,22 @@
         </a>
 
         <!-- Google Plus -->
-        <a href="https://plus.google.com/share?url=https://github.com/gschier/html-share-buttons" target="_blank" class="share-btn google-plus">
+        <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" target="_blank" class="share-btn google-plus">
             <i class="fa fa-google-plus"></i>
         </a>
 
         <!-- Facebook -->
-        <a href="http://www.facebook.com/sharer/sharer.php?u=https://github.com/gschier/html-share-buttons" target="_blank" class="share-btn facebook">
+        <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" target="_blank" class="share-btn facebook">
             <i class="fa fa-facebook"></i>
         </a>
 
         <!-- LinkedIn -->
-        <a href="http://www.linkedin.com/shareArticle?url=https://github.com/gschier/html-share-buttons&title=HMTL%20Share%20Buttons&summary=HMTL%20Share%20Buttons&source=http://schier.co/blog/2014/10/22/pure-html-share-buttons.html" target="_blank" class="share-btn linkedin">
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}" target="_blank" class="share-btn linkedin">
             <i class="fa fa-linkedin"></i>
         </a>
 
         <!-- Email -->
-        <a href="mailto:?subject=HMTL%20Share%20Buttons&body=https://github.com/gschier/html-share-buttons" target="_blank" class="share-btn email">
+        <a href="mailto:?subject={{ site.url }}{{ page.url }}" target="_blank" class="share-btn email">
             <i class="fa fa-envelope"></i>
         </a>
     </body>
