--- a/_includes/share-btn.html
+++ b/_includes/share-btn.html
@@ -1,3 +1,11 @@
+<!--
+I appreciate the posts by Gregory Schier http://schier.co/blog/2014/10/22/pure-html-share-buttons.html and
+Kanishk Kunal who wrote about including sharing buttons on a Jekyll website. 
+
+The following is basically Schier's code, but Kunal's examples with liquid tags were helpful, because I 
+did not understand how to modify Schier's example with my own site info without Kunal's post. 
+-->
+
 <html>
     <head>
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
