--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          {% if site.github_username %}
+         <!-- {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
           </li>
@@ -25,12 +25,27 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+          -->
+          
+          <div id="webaddress">
+       
+        <i class="fa fa-info-circle"></i> <a href="http://mindymallory.github.io/CV/">CV</a>
+        |
+        <i class="fa fa-hand-o-right"></i> <a href="http://ace.illinois.edu/directory/mallorym">ACE Webpage</a>
+        |
+        <i class="fa fa-github"></i> <a href="https://github.com/mindymallory">mindymallory</a>
+        |
+        <i class="fa fa-twitter"></i> <a href="https://twitter.com/ace_prof">ace_prof</a>
+        |
+        <i class="fa fa-google"></i> <a href="https://scholar.google.com/citations?user=bp9U6boAAAAJ&hl=en">scholar</a>
+        </div>
+          
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+      
+
+      
     </div>
 
   </div>
