--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
-{% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}<!doctype html>
+﻿{% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}<!doctype html>
 <html>
+{% include google_analytics.html %}
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
@@ -58,38 +59,6 @@ Commons Attribution-ShareAlike 4.0 International License</a></small>.
 			</footer>
 		</div>
 		<script src="/js/scale.fix.js"></script>
-{% comment %}
 
-============
- ATTENTION!
-============
-
-If you are forking this repository, please remove or update the following
-Google Analytics tracking code and disqus shortname before enabling the
-javascript segment below.
-
-{% endcomment %}{% if site.github.owner_name == 'pixelcog' %}
-		<script type="text/javascript">
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-70608433-1']);
-			_gaq.push(['_trackPageview']);
-
-			var disqus_shortname  = '',
-			    disqus_identifier = '{{ page.path | split:'/' | last | cgi_escape }}',
-			    disqus_url        = '{{ site.url }}{{ page.url | uri_escape }}'
-			;
-			(function() {
-				var load = function(src){
-					var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = src;
-					var e = document.getElementsByTagName('script')[0]; e.parentNode.insertBefore(s, e);
-				};
-				load(('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js');
-				load('//' + disqus_shortname + '.disqus.com/count.js');
-				if (document.getElementById('disqus_thread')) {
-					load('//' + disqus_shortname + '.disqus.com/embed.js');
-				}
-			})();
-		</script>
-{% endif %}
 	</body>
 </html>
