--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 				<h1><a href="/"><img src="https://avatars0.githubusercontent.com/u/11220097?v=3&s=460" alt="{{ site.name }}" width="300" /></a></h1>
 				<nav><ul>
 					<li><a {% if location == 'about' %}class="active" {% endif %}href="/about/">About</a></li>
+					<li><a {% if location == 'publications' %}class="active" {% endif %}href="/publications/">Publications</a></li>
 					<li><a {% if location == 'projects' %}class="active" {% endif %}href="/projects/">Projects</a></li>
 					<li><a {% if location == 'blog' %}class="active" {% endif %}href="/blog/">Blog</a></li>
 					<li><a {% if location == 'contact' %}class="active" {% endif %}href="/contact/">Contact</a></li>
