--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,19 @@
+Skip to content
+This repository
+Search
+Pull requests
+Issues
+Gist
+ @mindymallory
+ Watch 6
+  Star 21
+ Fork 25 pixelcog/pixelcog.com
+ Code  Issues 0  Pull requests 0  Pulse  Graphs
+Branch: gh-pages Find file Copy pathpixelcog.com/css/main.css
+a38a179  on Jan 21, 2015
+@mikegreiling mikegreiling add screenshot of icon template
+1 contributor
+RawBlameHistory     707 lines (598 sloc)  9.65 KB
 @import url(http://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
 
@@ -704,3 +720,5 @@ form {
 		width: 100%;
 	}
 }
+Status API Training Shop Blog About
+© 2016 GitHub, Inc. Terms Privacy Security Contact Help
