--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 {% if page.blogfeed %}
 		<link rel="alternate" type="application/atom+xml" title="{{ site.name }} — Feed" href="{{ site.url }}/blog/feed.atom" />
 {% endif %}
-		<link rel="stylesheet" href="{{site.baseurl}}/css/main.css" />
-		<link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css" />
+		<link rel="stylesheet" href="{{ site.url }}/css/main.css" />
+		<link rel="stylesheet" href="{{ site.url }}/css/syntax.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -21,7 +21,7 @@
 		<div class="wrapper{% if location == '' %} home{% endif %}">
 			<header>
 				<h1>Mindy L. Mallory</h1>
-				<h1><a href="/"><img src="{{ site.url }}/images/mallorym_2010i1.jpg" alt="{{ site.name }}" width="300" /></a></h1>
+				<h1><a href="/"><img src="https://avatars0.githubusercontent.com/u/11220097?v=3&s=460" alt="{{ site.name }}" width="300" /></a></h1>
 				<nav><ul>
 					<li><a {% if location == 'about' %}class="active" {% endif %}href="/about/">About</a></li>
 					<li><a {% if location == 'publications' %}class="active" {% endif %}href="/publications/">Publications</a></li>
@@ -35,7 +35,7 @@
 			<footer>
 
 				<p><a href="http://mindymallory.github.io/">Mindy Mallory</a> is an assistant professor in the Department of Agricultural and Consumer Economics at the University of Illinois.</p>
-				<p><a href="http://github.com/mindymallory">github</a> | <a href="http://twitter.com/ace_prof">twitter</a> <a href="mallorym@illinois.edu">email</a></p>
+				<p><a href="http://github.com/mindymallory">github</a> | <a href="http://twitter.com/ace_prof">twitter</a> | <a href="mallorym@illinois.edu">email</a></p>
 
 				<p>
 					
