--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 {% if page.blogfeed %}
 		<link rel="alternate" type="application/atom+xml" title="{{ site.name }} — Feed" href="{{ site.url }}/blog/feed.atom" />
 {% endif %}
-		<link rel="stylesheet" href="{{ site.url }}/css/main.css" />
-		<link rel="stylesheet" href="{{ site.url }}/css/syntax.css" />
+		<link rel="stylesheet" href="{{ site.url }}{{ page.url }}/css/main.css" />
+		<link rel="stylesheet" href="{{ site.url }}{{ page.url }}/css/syntax.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
