--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@ work is licensed under a
 Commons Attribution-ShareAlike 4.0 International License</a></small>.
 					</p>
 						<p>
-					<small>Webpage made with <a href="http://jekyllrb.com/">Jekyll</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
+					<small>Webpage made with <a href="http://jekyllrb.com/">Jekyll</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small> and <a href="http://pixelcog.com/">PixelCog</a>
 				</p>
 			</footer>
 		</div>
