--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+	 {% seo %}
 	</head>
 	<body>
 		<div class="wrapper{% if location == '' %} home{% endif %}">
