--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 			</section>
 			<footer>
 
-				<p><a href="http://mindymallory.github.io/">Mindy Mallory</a> is an assistant professor in the Department of Agricultural and Consumer Economics at the University of Illinois.</p>
+				<p><a href="http://mindymallory.github.io/">Mindy Mallory</a> is an Associate Professor in the Department of Agricultural and Consumer Economics at the University of Illinois.</p>
 				<p><a href="mailto:mallorym@illinois.edu">email</a> | <a href="http://ace.illinois.edu">ace</a> | <a href="http://github.com/mindymallory">github</a> | <a href="http://twitter.com/ace_prof">twitter</a> | <a href="http://mindymallory.github.io/CV/">cv</a></p>
 
 				<p>
